Added syntax highlighting

--- a/_blog/2017-12-24-arch-nuc-install.adoc
+++ b/_blog/2017-12-24-arch-nuc-install.adoc
@@ -1,6 +1,7 @@
 = Installing Arch Linux on my Intel NUC
 Marcus Crane <marcus@utf9k.net>
 v1.1, 2017-12-24
+:source-highlighter: rouge
 :page-tags: [arch, linux]
 :toc: preamble
 
@@ -12,10 +13,8 @@ Please note that this isn't some guide for pros or that I expect to have the mos
 
 As I'm installing on an Intel NUC, I'm going to assume you might like it run it mainly via WiFi so we'll start by getting online. You can do this graphically by running `wifi-menu`.
 
-[source,bash]
-```
+[source,shell]
 wifi-menu
-```
 
 Once you've set up a profile, you'll see a new entry when using the `ifconfig` command and you can confirm you're online with `ping archlinux.org -c 3`.
 
@@ -25,12 +24,10 @@ Personally, I wouldn't, and probably couldn't (yet) install Arch Linux as a dual
 
 First, we need to see what our current devices are:
 
-[source,bash]
-```
+[source,shell]
 fdisk -l
-```
 
-You may see a few. In my case, my hard drive has a few `/dev/sda{number}` entries and my USB has 2 `/dev/sdb{number}` entries. For the purposes of this guide, I'll be assuming that your hard drive is under `/dev/sda` but when installing to, say, a Macbook, I've found that the hard drive can be under `/dev/sdb`.
+You may see a few. In my case, my hard drive has a few `/dev/sda<number>` entries and my USB has 2 `/dev/sdb<number>` entries. For the purposes of this guide, I'll be assuming that your hard drive is under `/dev/sda` but when installing to, say, a Macbook, I've found that the hard drive can be under `/dev/sdb`.
 
 My hard drive will end up looking as follows once I've set it up:
 
@@ -60,18 +57,18 @@ My hard drive will end up looking as follows once I've set it up:
 
 I'm targeting a https://en.wikipedia.org/wiki/Unified_Extensible_Firmware_Interface[UEFI] BIOS  so we'll be using https://en.wikipedia.org/wiki/GUID_Partition_Table[GPT] for our partition table.
 
-The following uses https://www.gnu.org/software/parted/manual/parted.html[Parted] which you may or may not be familiar with if you've only use GUI installers before. Just follow along and I'll comment what each segment is roughly doing. From hereon in, URLs prefixed by a tilde ({tilde}) indicate resources where you can read further information if you're the curious sort.
+The following uses https://www.gnu.org/software/parted/manual/parted.html[Parted] which you may or may not be familiar with if you've only use GUI installers before. Just follow along and I'll comment what each segment is roughly doing. From hereon in, URLs prefixed by a tilde ({tilde}}) indicate resources where you can read further information if you're the curious sort.
 
 *NOTE*: The following WILL wipe your hard drive so ensure that this is what you'd like to do and/or that you've backed up everything from any currently installed OS
 
 == Partitioning
 
-[source,bash]
-```
+[source,shell]
+----
 # Launched parted, passing our hard drive as an argument
 parted /dev/sda
 
-# Create a partition table using the GUID Partition Table (GPT) format.
+Create a partition table using the GUID Partition Table (GPT) format.
 # This wipes your drive(!)
 mklabel gpt
 
@@ -98,7 +95,7 @@ mkpart primary 28.5GiB 100%
 
 # All done!
 quit
-```
+----
 
 Now that are partitions are set up, running `fdisk -l` again should show the following:
 
@@ -130,8 +127,8 @@ Now that are partitions are set up, running `fdisk -l` again should show the fol
 
 We don't need any utilites to create our file systems, we can just do 'em straight outta the box like so:
 
-[source,bash]
-```
+[source,shell]
+----
 # Create a 32bit VFAT filesystem for our boot partition
 # VFAT is essentially FAT32 with support for longer filenames. See below for more details.
 # ~ http://wiki.linuxquestions.org/wiki/VFAT
@@ -149,7 +146,7 @@ swapon /dev/sda3
 
 # Create an ext4 filesystem for our home partition
 mkfs.ext4 /dev/sda4
-```
+----
 
 Now that our hard drive is completely set up, we're ready to mount our file systems.
 
@@ -179,8 +176,8 @@ Just as a reminder, here's where we want our partitions to end up
 
 Here's how this layout translates into mount commands:
 
-[source,bash]
-```
+[source,shell]
+----
 # Mount our root partition to /mnt
 # NOTE: /mnt doesn't persist once we're in our bash prompt
 # For example, /mnt/home becomes just /home
@@ -197,7 +194,7 @@ mkdir /mnt/home
 
 # Mount the home partition to /home
 mount /dev/sda4 /mnt/home
-```
+----
 
 Nice! We're completely done and can start to actually install and configure Arch Linux.
 
@@ -205,10 +202,8 @@ Nice! We're completely done and can start to actually install and configure Arch
 
 Now we need to download and install the base packages for Arch Linux to our `/mnt` which will becomes our root (`/`) later on.
 
-[source,bash]
-```
+[source,shell]
 pacstrap /mnt base
-```
 
 For the curious, the `base` group contains a number of default libraries and utilties you may have used such as `man`, `openssl`, `bash`, `iptables` and `gcc` to name a few.
 
@@ -224,19 +219,15 @@ With Arch Linux installed, we can finally move off of our live USB and start a b
 
 Step 1 is generating a http://www.linfo.org/etc_fstab.html[file systems table], referred to as `fstab` going forward. This is done so that all devices (/dev/sdaX) specificied in the file are mounted automatically on startup.
 
-[source,bash]
-```
+[source,shell]
 genfstab -U /mnt >> /mnt/etc/fstab
-```
 
 The `-U` flag denotes that we want to identify our devices using https://en.wikipedia.org/wiki/Universally_unique_identifier[UUIDs], instead of labels, as noted https://github.com/falconindy/arch-install-scripts/blob/master/genfstab.in#L86[here].
 
 Step 2 is even quicker being shorter
 
-[source,bash]
-```
+[source,shell]
 arch-chroot /mnt
-```
 
 `arch-chroot`, seen https://github.com/falconindy/arch-install-scripts/blob/master/arch-chroot.in[here] changes the root directory to, well, `/` which is our new root directory. As we're still on the live USB, we specify it as `/mnt` instead.
 
@@ -282,11 +273,11 @@ To do so, edit `/etc/locale.gen` and uncomment your respective locale. In short,
 
 Once you've done that, you'll need to generate the locale files and export your language to your environment
 
-[source,bash]
-```
+[source,shell]
+----
 locale-gen
 export LANG={xx}_{yy}.UTF-8
-```
+----
 
 If done successfully, `echo $LANG` will display your locale.
 
@@ -298,35 +289,27 @@ Selecting our timezone is fairly straightforward thanks to an interactive progra
 
 Once you've confirmed the output, it will mention appending the timezone to a file. Instead, we want to symlink that timezone to a file. In my case, the timezone is `Pacific/Auckland` but of course, you'll want to input your respective timezone instead.
 
-[source,bash]
-```
+[source,shell]
 ln -s /usr/share/zoneinfo/Pacific/Auckland /etc/localtime
-```
 
 == Setting hardware clock
 
 The last of our locale related setups is configuring the system clock. To do that, we'll tell our hardware clock to set the system time using the `--hctosys` option. You can read more about `hwclock` and how it differs from system time [here](https://linux.die.net/man/8/hwclock)
 
-[source,bash]
-```
+[source,shell]
 hwclock --systohc
-```
 
 == Hostname setup
 
 We like life to be simple (but no simpler) and giving our computer/server a unique name is an important part of that process. For this bit, let's assume we want to name our system `weinerdog` because it sounds silly.
 
-[source,bash]
-```
+[source,shell]
 echo weinerdog > /etc/hostname
-```
 
 Oh, that was easy. We also need to tell our system that `weinerdog` is an alias for `127.0.0.1`, just like `localhost` is. We could fire up our favourite editor but it's likely `/etc/hosts` is empty so just do the following:
 
-[source,bash]
-```
+[source,shell]
 echo 127.0.0.1 localhost weinerdog > /etc/hosts
-```
 
 How quick was that, huh?
 
@@ -334,10 +317,8 @@ How quick was that, huh?
 
 We'll be using this password to login, which I sometimes forget. It _bashould_ be different than the password for the user account we'll be making soon but I'd be lying if I said I have a super secure password. You have bigger problems if you think this writeup will give you top notch security anyway. I'm just here for a usable system!
 
-[source,bash]
-```
+[source,shell]
 passwd
-```
 
 Just type in your password twice. Not much more to it than that.
 
@@ -345,10 +326,8 @@ Just type in your password twice. Not much more to it than that.
 
 We'll be using `systemd-boot` as our EFI boot manager. I couldn't tell you anything about it other than it works and that's good enough.
 
-[source,bash]
-```
+[source,shell]
 bootctl --path=/boot install
-```
 
 The above command copies the `systemd-boot` binary to our EFI System Partition (`/boot`) and adds it as the default EFI application to be loaded as stated [here](https://wiki.archlinux.org/index.php/systemd-boot#EFI_boot).
 
@@ -356,21 +335,19 @@ The above command copies the `systemd-boot` binary to our EFI System Partition (
 
 Now that we have a boot manager, we need to tell it what to boot exactly. We'll create a new `arch.conf` entry using `nano`:
 
-[source,bash]
-```
+[source,shell]
 nano /boot/loader/entries/arch.conf
-```
 
 and enter the following
 
-[source,bash]
-```
+[source,shell]
+----
 title Arch Linux
 linux /vmlinuz-linux
 initrd /intel-ucode.img
 initrd /initramfs-linux.img
 options root=/dev/sda2 rw elevator=deadline quiet splash resume=/dev/sda3 nmi_watchdog=0
-```
+----
 
 *NOTE*: The line `initrd /intel-ucode.img` *ONLY* applies if you installed the `intel-ucode` package from earlier which anyone with an Intel CPU should do.
 
@@ -378,18 +355,16 @@ As for the options, I couldn't say if you need, or don't need, any of them but i
 
 Once that's created, set it as the default configuration:
 
-[source,bash]
-```
+[source,shell]
 echo "default arch" > /boot/loader/loader.conf
-```
 
 and now you're ready to reboot into a nicely working system!
 
-[source,bash]
-```
+[source,shell]
+----
 exit
 reboot
-```
+----
 
 I've still got a lot to learn about Arch Linux but so far, the above setup has worked well for me.
 
