--- a/_blog/2019-07-20-wsl2-vhd-issue.adoc
+++ b/_blog/2019-07-20-wsl2-vhd-issue.adoc
@@ -1,8 +1,8 @@
 = Fixing a WSL2 VHD conversion issue
 Marcus Crane <marcus@utf9k.net>
 v1.0, 2019-07-20
+:source-highlighter: rouge
 :page-tags: [windows, wsl, beta, linux]
-:toc:
 
 I recently started running the Windows Insider builds on my desktop so that I could play around with the new Windows Subsystem for Linux but I ran into some trouble. Before I get into the fix, here's a little bit of history
 
@@ -35,6 +35,6 @@ You'd never know it but your WSL packages live under `%LOCALAPPDATA%/packages/<d
 
 The terms "uncompressed and unencrypted" tipped me off to check those blasted "advanced settings". Under menu:General[Advanced], I spotted `Compress contents to save disk space` was ticked for some reason. Unchecking it, then rerunning the WSL 1 -> 2 conversion then worked as you'd hope.
 
-image::/img/wsl2-vhd-issue/compressed.png[]
+image::/static//img/wsl2-vhd-issue/compressed.png[]
 
 So, if you run into this issue, have a poke around your packages and hopefully you'll be on your way to a nice, properly Linux-y home on Windows.
