--- a/index.adoc
+++ b/index.adoc
@@ -3,7 +3,7 @@
 
 I'm Marcus Crane, a https://en.wikipedia.org/wiki/Site_Reliability_Engineering[Site Reliability Engineer] at https://xero.com/nz/[Xero] in https://en.wikipedia.org/wiki/Auckland[Auckland, New Zealand].
 
-I'm always moving this site around but you should be able to find everything on this site linked below.
+I'm always moving this site around but you should be able to find everything on this site linked below. You can see changes listed in the http://utf9k.net/CHANGELOG[CHANGELOG].
 
 You can also view the source of this site on https://github.com/marcus-crane/utf9k[Github].
 
