--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -5,5 +5,13 @@
 
 === August
 
+==== 29th
+
 * Added this changelog to track all the different variations of my site over time (will fill it out later)
-* Moved to Jekyll. Wanted to try Asciidoc and Hugo puts some limitations on Asciidoc rendering. I also remove all of the list type pages in favour of having everything the front page. Still not sure how I feel about it so it might change some more in the future!
+* Moved to Jekyll. I wanted to try Asciidoc and Hugo puts some limitations on Asciidoc rendering.
+  - I also removed all of the list type pages in favour of having everything the front page. Still not sure how I feel about it so it might change some more in the future!
+  - Fixed some small typos on posts while porting them from markdown to asciidoc. Everything starts at v1.0 with those amended updated to v1.1
+
+==== 19th
+
+* Wrote a post about turning 25. It was mainly just a tangent about what I'd like to do with this site going forward.
