--- a/index.adoc
+++ b/index.adoc
@@ -5,9 +5,9 @@ I'm Marcus Crane, a https://en.wikipedia.org/wiki/Site_Reliability_Engineering[S
 
 I'm always moving this site around but you should be able to find everything on this site linked below. You can see changes listed in the http://utf9k.net/CHANGELOG[CHANGELOG].
 
-You can also view the source of this site on https://github.com/marcus-crane/utf9k[Github].
+You can also view the source of this site on https://gitlab.com/marcus-crane/utf9k[Gitlab].
 
-I'm around the web in a bunch of places: https://github.com/marcus-crane[github] | https://instagram.com/sentryism[instagram] | https://linkedin.com/in/marcus-crane[linkedin] | https://twitter.com/sentreh[twitter]
+I'm around the web in a bunch of places: https://github.com/marcus-crane[github] | https://gitlab.com/marcus-crane[gitlab] | https://instagram.com/sentryism[instagram] | https://linkedin.com/in/marcus-crane[linkedin] | https://twitter.com/sentreh[twitter]
 
 +//+
 
