--- a/_blog/2018-12-03-automation-right.adoc
+++ b/_blog/2018-12-03-automation-right.adoc
@@ -1,6 +1,7 @@
 = When automation goes horribly right
 Marcus Crane <marcus@utf9k.net>
 v1.0, 2018-12-03
+:page-permalink: /blog/automation-right
 :page-tags: [automation, microservices, twitter]
 :imagesdir: /static/img/automation-right
 
