--- a/_blog/2017-12-24-arch-nuc-install.adoc
+++ b/_blog/2017-12-24-arch-nuc-install.adoc
@@ -1,6 +1,7 @@
 = Installing Arch Linux on my Intel NUC
 Marcus Crane <marcus@utf9k.net>
 v1.1, 2017-12-24
+:page-permalink: /blog/arch-nuc-install
 :source-highlighter: rouge
 :page-tags: [arch, linux]
 :toc: preamble
