--- a/_blog/2018-02-15-day-xero.adoc
+++ b/_blog/2018-02-15-day-xero.adoc
@@ -1,6 +1,7 @@
 = Day Xero
 Marcus Crane <marcus@utf9k.net>
 v1.1, 2018-02-15
+:page-permalink: /blog/day-xero
 :page-tags: [anxiety, work]
 
 Technically it's Day 1 of my new job, a Graduate Site Reliability Engineer at https://www.xero.com/nz/[Xero] but it hasn't officially started since I'm still on my way to the airport.
