--- a/_blog/2019-03-20-future-of-emergency-services.adoc
+++ b/_blog/2019-03-20-future-of-emergency-services.adoc
@@ -1,6 +1,7 @@
 = What is the future of emergency services?
 Marcus Crane <marcus@utf9k.net>
 v1.0, 2019-03-20
+:page-permalink: /blog/future-of-emergency-services
 :page-tags: [people, future]
 
 Yesterday, I had an onset of severe abdominal pains. I didn't want to overreact so I called https://www.health.govt.nz/your-health/services-and-support/health-care-services/healthline[Healthline] who recommended I see either my GP, or https://en.wikipedia.org/wiki/Emergency_department[A&E] within the next 6 hours.
