--- a/_blog/2019-07-20-wsl2-vhd-issue.adoc
+++ b/_blog/2019-07-20-wsl2-vhd-issue.adoc
@@ -1,6 +1,7 @@
 = Fixing a WSL2 VHD conversion issue
 Marcus Crane <marcus@utf9k.net>
 v1.0, 2019-07-20
+:page-permalink: /blog/wsl2-vhd-issue
 :source-highlighter: rouge
 :page-tags: [windows, wsl, beta, linux]
 
