--- a/_blog/2019-07-29-retrieving-jenkins-credentials.adoc
+++ b/_blog/2019-07-29-retrieving-jenkins-credentials.adoc
@@ -1,6 +1,7 @@
 = Retrieving credentials from Jenkins
 Marcus Crane <marcus@utf9k.net>
 v1.0, 2019-07-29
+:page-permalink: /blog/retrieving-jenkins-credentials
 :page-tags: [jenkins, security]
 :imagesdir: /static/img/jenkins-credentials
 
