--- a/_blog/2019-08-19-25.adoc
+++ b/_blog/2019-08-19-25.adoc
@@ -1,6 +1,7 @@
 = 25
 Marcus Crane <marcus@utf9k.net>
 v1.0, 2019-08-19
+:page-permalink: /blog/25
 :page-tags: [meta]
 
 It's 6:30pm on my 25th birthday and I've been reflecting a bit on what I've managed to accomplish so far. While this isn't a post about that, there's no better time to assess the state of my personal site and where I'd like to go forward.
