--- a/_projects/2017-12-03-repo-birthdays.adoc
+++ b/_projects/2017-12-03-repo-birthdays.adoc
@@ -1,6 +1,7 @@
 = Repo Birthdays
 Marcus Crane <marcus@utf9k.net>
 v1.0, 2017-12-03
+:page-permalink: /projects/repo-birthdays
 :page-tags: [chrome, extension, javascript]
 
 I'd often visit a repository and wonder just how old it is. Stars might indicate popularity but I imagine most of the time there's an initial burst of activity that slowly dies off as https://producthunt.com[product hunters] and https://news.ycombinator.com[hacker newsers] fade into the either.
