--- a/_reviews/2014-12-13-asuras-wrath.adoc
+++ b/_reviews/2014-12-13-asuras-wrath.adoc
@@ -1,6 +1,7 @@
 = Asura's Wrath
 Marcus Crane <marcus@utf9k.net>
 v1.0, 2014-12-23
+:page-permalink: /reviews/asuras-wrath
 
 If you've heard of this title before but have yet to play it, I'm going to
 assume that the first thing that springs to mind is "Oh, wasn't Asura's Wrath
